--- a/products.html
+++ b/products.html
@@ -46,7 +46,7 @@
                             </h2>
                         </div>
                     </div>
-                    <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="assets/img/products-01.jpg" alt="..." />
+                    <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="/assets/img/products-01.jpg" alt="..." />
                     <div class="product-item-description d-flex me-auto">
                         <div class="bg-faded p-5 rounded"><p class="mb-0">Wheat Bansi-60Rs/Kg and Wheat Sonamoti-150Rs/Kg</p></div>
                     </div>
