--- a/products.html
+++ b/products.html
@@ -38,6 +38,13 @@
         <section class="page-section">
             <div class="container">
                 <div class="product-item">
+                    <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="assets/img/products-06.jpg" alt="..." />
+                </div>
+            </div>
+        </section>		
+        <section class="page-section">
+            <div class="container">
+                <div class="product-item">
                     <div class="product-item-title d-flex">
                         <div class="bg-faded p-5 d-flex ms-auto rounded">
                             <h2 class="section-heading mb-0">
